--- a/index.advanced.html
+++ b/index.advanced.html
@@ -6,8 +6,7 @@
   <title>장바구니</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 p-8">
+<html class="bg-gray-100 p-8">
 <main id="app"></main>
-<script type="module" src="./src/advanced/src/main.jsx"></script>
-</body>
+<script type="module" src="/src/advanced/src/main.jsx"></script>
 </html>
