--- a/src/advanced/index.html
+++ b/src/advanced/index.html
@@ -9,6 +9,6 @@
   </head>
   <body class="bg-gray-100 p-8">
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
